Movie.java takes a path as input from the caller